tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/positive/grouped-module-imports.wyst
module corpus.grouped_imports

pub import (
  drivers.uart as uart,
  runtime.clock { now, Instant as ClockInstant },
)

fn main() { }
