tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/per-entry-public-grouped-module-import.wyst
module corpus.invalid_group

import (
  pub runtime.clock,
)
